--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-search": "^2.3.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
+    "hexo-material": "^1.5.0",
     "hexo-prism-plugin": "^2.1.2",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
