--- a/_config.yml
+++ b/_config.yml
@@ -90,11 +90,13 @@ materialcdn:
     use: true # 默认为 false
     base: https://materialcdn.nfz.moe/hexo/1.3.2
 feed:
-  type: atom
-  path: atom.xml
-  limit: 20
-  hub:
-  content:
+    type: atom
+    path: atom.xml
+    limit: 20
+    hub:
+    content:
+    content_limit:
+    content_limit_delim: ' '
 
 qrcode: true
 
