--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-prism-plugin": "^2.1.2",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-pug": "0.0.5",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
   }
