--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-pug": "0.0.5",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-toc": "^1.1.0",
+    "social-share.js": "^1.0.16"
   }
 }
